--- a/src/makefile
+++ b/src/makefile
@@ -7,7 +7,7 @@ TARGET=run_compiler
 all:
 	$(YC) -d mongcc.y
 	$(FL) mongcc.l
-	$(CC) -w -g lex.yy.c y.tab.c -lfl -o $(TARGET)
+	$(CC) -w -g lex.yy.c y.tab.c structure.c -lfl -o $(TARGET)
 
 clean:
 	rm $(TARGET) y.tab.c y.tab.h lex.yy.c
